Updated Course Site
These are the updated file for the WRA 410 Course Site

--- a/groups.html
+++ b/groups.html
@@ -10,7 +10,7 @@
     </div>
     <div id ="content">
       <div id = "nav">
-  
+<b>Navigation</b>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -18,54 +18,66 @@
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="assignments.html">Assignments</a></li>
           <li><a href="resources.html">Resources</a></li>
+          <li><a class="selected" href="groups.html">Groups</a></li>
       </div>
       <div id = "main">
         <h2> Student Groups </h2>
-       
-       <div id = "student-group">
-        <div class = student-group-name> Group 1</div>
-        <a href="https://github.com/">Anthony Zhu</a>
-        <a href="https://github.com/">Alana Carl</a>
+
+       <table id="student-group">
+         <tr>
+           <th>Group Number</th>
+           <th>Group Members</th>
+         </tr>
+         <tr>
+<tr>
+           <td>Group 1</td>
+      <td>
+        <a href="https://github.com/">Anthony Zhu</a><br>
+        <a href="https://github.com/">Alana Carl</a><br>
         <a href="https://github.com/">Gilad Rozin</a>
-       </div>
-     
-      <div id = "student-group">
-        <div class = student-group-name> Group 2 </div>
-        <a href="https://github.com/">Julian Jabbour</a>
-        <a href="https://github.com/diamase">Zaria Young</a>
+      </td>
+</tr>
+<tr>
+           <td>Group 2</td>
+      <td>
+        <a href="https://github.com/">Julian Jabbour</a><br>
+        <a href="https://github.com/diamase">Zaria Young</a><br>
         <a href="https://github.com/diamase">Mila Murray</a>
-       </div>
-
-       <div id = "student-group">
-        <div class = student-group-name>Group 3 </div>
-        <a href="https://github.com/">Sydney Jackson</a>
-        <a href="https://github.com/">Ethan Kolderman</a>
+      </td>
+</tr>
+<tr>
+           <td>Group 3</td>
+      <td>
+        <a href="https://github.com/">Sydney Jackson</a><br>
+        <a href="https://github.com/">Ethan Kolderman</a><br>
         <a href="https://github.com/">Julian Dodd</a>
-       </div>
-
-       <div id = "student-group">
-        <div class = student-group-name>Group 4</div>
-        <a href="https://github.com/">Zach Albright</a>
-        <a href="https://github.com/">Gary Tubbs</a>
+      </td>
+</tr>
+<tr>
+           <td>Group 4</td>
+      <td>
+        <a href="https://github.com/">Zach Albright</a><br>
+        <a href="https://github.com/">Gary Tubbs</a><br>
         <a href="https://github.com/">Logan Eveland</a>
-
-       </div>
-
-       <div id = "student-group">
-        <div class = student-group-name>Group 5</div>
-        <a href="https://github.com/">Nathan Phillips</a>
-        <a href="https://github.com/">Janasia Watkins</a>
+      </td>
+</tr>
+<tr>
+           <td>Group 5</td>
+      <td>
+        <a href="https://github.com/">Nathan Phillips</a><br>
+        <a href="https://github.com/">Janasia Watkins</a><br>
         <a href="https://github.com/">Xuan Wang</a>
-
-       </div>
-
-       <div id = "student-group">
-        <div class = student-group-name>Group 6</div>
-        <a href="https://github.com/">Zamani Coakieanos</a>
-        <a href="https://github.com/">Olivia Dalby</a>
+      </td>
+</tr>
+<tr>
+           <td>Group 6</td>
+      <td>
+        <a href="https://github.com/">Zamani Coakieanos</a><br>
+        <a href="https://github.com/">Olivia Dalby</a><br>
         <a href="https://github.com/">Sam Tavolacci</a>
-
-       </div>
+      </td>
+</tr>
+</table>
 
       </div>
     </div>
