--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <div id ="content">
       <div id = "nav">
-   
+<b>Navigation</b>
         <ul>
           <li><a class="selected" href="">Home</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -35,6 +35,9 @@
 
          <p>This will provide us with a sophisticated context to focus on principles like User Centered Design, Test Driven Development, Object Oriented Programming and other principles that lead to software development practices that are scalable, collaborative, and sustainable.</p>
 
+      </div>
+      <div id ="homeimage">
+        <img src="https://www.jing.fm/clipimg/full/170-1708052_msu-michigan-state-university-arm-emblem-logo-michigan.png" alt="MSU Logo" style="width:150px;height:110px" padding="100px">
       </div>
     </div>
     <div id = "footer">
