--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     </div>
     <div id ="content">
       <div id = "nav">
-    
+<b>Navigation</b>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a class="selected"href="contact.html">Contact</a></li>
@@ -18,20 +18,24 @@
           <li><a href="schedule.html">Schedule</a></li>
           <li><a href="assignments.html">Assignments</a></li>
           <li><a href="resources.html">Resources</a></li>
+          <li><a href="groups.html">Groups</a></li>
       </div>
       <div id = "main">
         <h2> Dr. John Monberg </h2>
+        <div id="contactimage">
+          <img src="https://image.flaticon.com/icons/png/512/20/20061.png" alt="Spartan S" style="float:right;width:100px;height:100px;">
+        </div>
         <p>263 Bessey Hall   </p>
-        <p><A HREF="mailto:jmonberg@msu.edu">jmonberg@msu.edu</A> </p>
+        <p><A HREF="mailto:jmonberg@msu.edu">jmonberg@msu.edu</A></p>
         <p> Office Hours: Tu, Tr: 12:00-1:00 and by appointment </p>
         <p><A HREF=" http://jmonberg.msu.domains">Home Page</A> </p>
-        <p><a href="https://twitter.com/jmonberg">Twitter: @jmonberg</a> </p>
-
+        <p><a href="https://twitter.com/jmonberg">Twitter: @jmonberg</a></p>
       </div>
     </div>
     <div id = "footer">
       Copyright &copy; 2019 John Monberg
     </div>
   </div>
+
 </body>
 </html>
